# kitsune2

./: CHANGELOG.md  Cargo.toml  flake.nix
.github/workflows/: test.yaml
crates/api/src/: peer_meta_store.rs  url.rs
crates/bootstrap_srv/: Cargo.toml
crates/bootstrap_srv/src/: config.rs  http.rs  server.rs  test.rs
crates/core/src/factories/: core_bootstrap.rs  core_fetch.rs  core_publish.rs  core_space.rs  mem_bootstrap.rs  mem_peer_store.rs
crates/gossip/src/: config.rs
crates/kitsune2/: Cargo.toml
crates/kitsune2/src/: lib.rs
crates/kitsune2_showcase/: Cargo.toml
crates/kitsune2_showcase/src/: app.rs  main.rs
crates/transport_iroh/: Cargo.toml
crates/transport_iroh/src/: lib.rs
crates/transport_tx5/: Cargo.toml
crates/transport_tx5/src/: lib.rs
