[package]
name = "kitsune2_bootstrap_srv"
version.workspace = true
description = "p2p / dht communication WAN discovery bootstrapping server"
license.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/kitsune2_bootstrap_srv"
authors.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[dependencies]
async-channel = { workspace = true }
axum = { workspace = true, default-features = false, features = [
  "http1",
  "tokio",
  "ws",
] }
axum-server = { workspace = true, features = ["tls-rustls-no-provider"] }
rand = { workspace = true }
rustls = { workspace = true, features = ["ring"] }
base64 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive", "wrap_help"] }
ctrlc = { workspace = true }
ed25519-dalek = { workspace = true }
futures = { workspace = true }
num_cpus = { workspace = true }
sbd-server = { workspace = true, features = ["tungstenite"] }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
  "time",
  "rt",
  "rt-multi-thread",
  "io-util",
] }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
ureq = { workspace = true, features = ["tls"] }

[dev-dependencies]
rcgen = { workspace = true }
sbd-client = { workspace = true }

[features]
default = []

# enable axum http2 support
http2 = ["axum/http2"]
